--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server_application",
   "version": "1.0.0",
+  "type": "module",
   "description": "express server application for the ACG web app",
   "main": "index.js",
   "scripts": {
@@ -9,7 +10,7 @@
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Ron Hinton",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,6 +20,7 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "jest": "^29.7.0",
     "nodemon": "^3.0.1"
   }
